# awamir-plus

./: .gitignore  README.md  txt.txt
backend/awamir_plus/: MANIFEST.in  README.md  license.txt  pyproject.toml
backend/awamir_plus/awamir_plus/: constants.py  doctype_permissions.py  hooks.py  install.py  modules.txt  permissions.py  utils.py
backend/awamir_plus/awamir_plus/api/: accounting.py  approvals.py  auth.py  cash_closure.py  customers.py  delivery.py  demo.py  distribution.py  exceptions.py  notifications.py  orders.py  production.py  products.py
backend/awamir_plus/awamir_plus/awamir_plus/: module.json
backend/awamir_plus/awamir_plus/awamir_plus/doctype/awamir_app_settings/: awamir_app_settings.json  awamir_app_settings.py
backend/awamir_plus/awamir_plus/awamir_plus/doctype/awamir_audit_log/: awamir_audit_log.json  awamir_audit_log.py
backend/awamir_plus/awamir_plus/awamir_plus/doctype/awamir_cash_closure_log/: awamir_cash_closure_log.json  awamir_cash_closure_log.py
backend/awamir_plus/awamir_plus/awamir_plus/doctype/awamir_daily_cash_closure/: awamir_daily_cash_closure.json  (+1 more)
backend/awamir_plus/awamir_plus/config/: desktop.py
backend/awamir_plus/awamir_plus/fixtures/: custom_field.json  module_def.json  role.json
backend/awamir_plus/awamir_plus/scripts/: seed_demo_data.py  smoke_v02.py
backend/awamir_plus/awamir_plus/services/: accounting.py  delivery_batch.py  fulfillment.py
backend/awamir_plus/awamir_plus/tests/: test_contracts.py  test_v02_operational_contracts.py
backend/awamir_plus/scripts/: verify_structure.py
docs/: API.md  (+17 more)
(+125 files in other folders)
