[project]
name = "awamir_plus"
authors = [
    { name = "Awamir Plus", email = "support@example.com" }
]
description = "Operational order workflow backend for Awamir Plus on Frappe/ERPNext."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"
erpnext = ">=15.0.0"
